--- a/GPT_3_Dash_Playground.ipynb
+++ b/GPT_3_Dash_Playground.ipynb
@@ -344,15 +344,7 @@
         "id": "jiiqGHA__P-s",
         "outputId": "a2d8b11b-05ca-4db6-ffb7-5336307d44ac"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "127.0.0.1 - - [06/Mar/2023 16:09:25] \"GET /_reload-hash HTTP/1.1\" 200 -\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "##!pip uninstall dash jupyter_dash\n",
         "## Temporary usage of Dash 2.0 due to a bug on 2.1\n",
@@ -563,7 +555,10 @@
         "        placeholder=\"Load a preset\"\n",
         "    ),\n",
         "    html.Button('Translate', id='translate-button', n_clicks=0),\n",
+        "    html.Button('Save As', id='translate-button-word',n_clicks=0),\n",
         "    html.Div(id='textarea-translate-output', style={'whiteSpace': 'pre-line', 'padding-top': '10px'}),\n",
+        "    # dcc.Store stores the intermediate value\n",
+        "    dcc.Store(id='translate-intermediate-value'),\n",
         "    html.Pre(\n",
         "        id='div-translate-results2',\n",
         "        style={\n",
@@ -577,6 +572,21 @@
         "          'font-size': '100%',\n",
         "          'border': 'solid 1px #A2B1C6'\n",
         "          }\n",
+        "        ),\n",
+        "    html.Pre(\n",
+        "        id='div-translate-results3',\n",
+        "        style={\n",
+        "          'height': 10, \n",
+        "          'overflow': 'auto',\n",
+        "          'font-family': 'courier new',\n",
+        "          'font-weight': 'bold',\n",
+        "          'color': 'white',\n",
+        "          'background-color': 'Black',\n",
+        "          'padding': '10px',\n",
+        "          'font-size': '100%',\n",
+        "          'border': 'solid 1px #A2B1C6'\n",
+        "          }\n",
+        "\n",
         "        ),\n",
         "],\n",
         "    style={\n",
@@ -613,25 +623,53 @@
         "##\n",
         "@app.callback(\n",
         "    Output(component_id='div-translate-results2', component_property='children'),\n",
-        "    #Output('intermediate-value', 'data'),\n",
+        "    Output('translate-intermediate-value', 'data'),\n",
         "    State(component_id='textarea-translate', component_property='value'),\n",
         "    State(component_id='dropdown-translate', component_property='value'),\n",
         "    Input('translate-button', 'n_clicks')\n",
         ")\n",
         "def update_translate_output2(textarea_translate, dropdown_translate, n_clicks):\n",
+        "    values = []\n",
         "    if n_clicks is None or n_clicks == 0:\n",
-        "        return 'nothing generated yet'\n",
+        "        return ['(nothing generated yet)','']\n",
         "    else:\n",
         "        if dropdown_translate == '01':\n",
         "          results = globals()['run_preset_11'](textarea_translate + \" Create Process document\")\n",
-        "          print(n_clicks)\n",
+        "          values.append(results)\n",
+        "          values.append(\"Q: \"+textarea_translate.strip()+\"\\nA: \"+results.strip())\n",
+        "          return values\n",
         "        elif dropdown_translate == '02':\n",
         "          results = globals()['run_preset_11'](textarea_translate + \" Create Software design document\")\n",
+        "          values.append(results)\n",
+        "          values.append(\"Q: \"+textarea_translate.strip()+\"\\nA: \"+results.strip())\n",
+        "          return values\n",
         "        elif dropdown_translate == '03':\n",
-        "          results = globals()['run_preset_11'](textarea_translate + \" Create SRS Document\")   \n",
+        "          results = globals()['run_preset_11'](textarea_translate + \" Create SRS Document\") \n",
+        "          values.append(results)\n",
+        "          values.append(\"Q: \"+textarea_translate.strip()+\"\\nA: \"+results.strip())\n",
+        "          return values  \n",
         "        return results\n",
         "\n",
-        "\n",
+        "##\n",
+        "## Called when the Button 'Word' in translate page is pushed\n",
+        "##\n",
+        "@app.callback(\n",
+        "     Output(component_id='div-translate-results3', component_property='children'),\n",
+        "     Input('translate-button-word','n_clicks'),\n",
+        "     Input('translate-intermediate-value', 'data')\n",
+        ")\n",
+        "def save_to_word(n_clicks,data):\n",
+        "     if n_clicks is None or n_clicks == 0:\n",
+        "          return 'No Output Generated'\n",
+        "     filename = data.split(\"\\n\")\n",
+        "     filename = filename[0]\n",
+        "     filename = filename[3:13]\n",
+        "     filename = filename.replace(\" \", \"_\")\n",
+        "     filename = re.sub(\"[^A-Z_]\", \"\", filename,0,re.IGNORECASE)\n",
+        "     print(data)\n",
+        "     mydoc.add_paragraph(data)\n",
+        "     mydoc.save('D:/ChatGPT3/%s.docx' %filename)\n",
+        "     return 'Exported to Word file!'\n",
         "\n",
         "# Define the callbacks to update the page content based on the URL\n",
         "@app.callback(Output('page-content', 'children'),\n",
