Added Autosave functionality.

--- a/GPT_3_Dash_Playground.ipynb
+++ b/GPT_3_Dash_Playground.ipynb
@@ -3,25 +3,29 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "colab_type": "text",
+        "id": "view-in-github"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/rohanbisht001/GPT-3_Dash_Playground/blob/main/GPT_3_Dash_Playground.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7spMah2txUdy"
       },
       "source": [
         "# **GPT-3 PlayGround**\n",
-        "Simple web application using GPT-3 and Dash.\n",
-        "The playground demonstrates how to generate code with natural language.\n",
-        "\n",
-        "Autor: Offer Sadey"
+        "Simple web application using GPT-3 and Dash."
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3aOgxgfZGxNL",
-        "outputId": "01d68efb-62e3-4356-bb38-cb53564ca546"
+        "id": "3aOgxgfZGxNL"
       },
       "outputs": [],
       "source": [
@@ -30,7 +34,10 @@
         "import os\n",
         "import openai\n",
         "\n",
-        "openai.api_key = \"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\""
+        "openai.api_key = \"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\"\n",
+        "\n",
+        "#Sparsh = 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\n",
+        "#Rohan = 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"
       ]
     },
     {
@@ -226,23 +233,46 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#Used model \"gpt-3.5-turbo\" below\n",
+        "\n",
+        "# def run_preset_11(query):\n",
+        "#   response = openai.Completion.create(\n",
+        "#     model=\"text-davinci-003\",\n",
+        "#     prompt=query,\n",
+        "#     temperature=0.9,\n",
+        "#     max_tokens=1500,\n",
+        "#     top_p=1,\n",
+        "#     frequency_penalty=0.0,\n",
+        "#     presence_penalty=0.6,\n",
+        "#     stop=[\" Human:\", \" AI:\"]\n",
+        "# )\n",
+        "#   return response.choices[0].text"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "OGQR6EY5GP4n"
       },
       "outputs": [],
       "source": [
         "def run_preset_11(query):\n",
-        "  response = openai.Completion.create(\n",
-        "    model=\"text-davinci-003\",\n",
-        "    prompt=query,\n",
-        "    temperature=0.9,\n",
+        "  response = openai.ChatCompletion.create(\n",
+        "    model=\"gpt-3.5-turbo\",\n",
+        "    messages=[{\"role\": \"user\", \"content\": query}],\n",
+        "    # prompt=query,\n",
+        "    temperature=0.4,\n",
         "    max_tokens=1500,\n",
         "    top_p=1,\n",
         "    frequency_penalty=0.0,\n",
         "    presence_penalty=0.6,\n",
         "    stop=[\" Human:\", \" AI:\"]\n",
         ")\n",
-        "  return response.choices[0].text"
+        "  return response.choices[0].message.content"
       ]
     },
     {
@@ -277,51 +307,43 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "lZT2KEIKibfO"
-      },
-      "source": [
-        "**Translate**"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-sbyTZ5BikyQ"
-      },
-      "outputs": [],
-      "source": [
-        "#Used Google translate api instead\n",
-        "\n",
-        "# def run_preset_13(query):\n",
-        "#   response = openai.Completion.create(\n",
-        "#     model=\"text-davinci-003\",\n",
-        "#     prompt=query,\n",
-        "#     temperature=0.3,\n",
-        "#     max_tokens=100,\n",
-        "#     top_p=1.0,\n",
-        "#     frequency_penalty=0.0,\n",
-        "#     presence_penalty=0.0\n",
-        "# )\n",
-        "#   return response.choices[0].text"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vyN5secFMov9",
-        "outputId": "ebe0b2cb-691e-452b-b4d3-43830a30b487"
+        "id": "vyN5secFMov9"
       },
       "outputs": [],
       "source": [
         "!pip install python-docx\n",
         "!pip install pandas"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Hide Demographic Information**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import re\n",
+        "def hideDemogrphics(textarea):\n",
+        "    name_pattern = re.compile(r'\\b([A-Z][a-z]*\\s*){1,2}\\b')\n",
+        "    phone_pattern = re.compile(r'\\d{3}[-.\\s]??\\d{3}[-.\\s]??\\d{4}')\n",
+        "    email_pattern = re.compile(r'\\b[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Z|a-z]{2,}\\b')\n",
+        "\n",
+        "    masked_text = textarea\n",
+        "\n",
+        "    #masked_text = name_pattern.sub('***',masked_text)\n",
+        "    masked_text = phone_pattern.sub('9999999999', masked_text)\n",
+        "    masked_text = email_pattern.sub('ad*****@****.com', masked_text)\n",
+        "    return masked_text"
       ]
     },
     {
@@ -337,32 +359,26 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        },
-        "id": "jiiqGHA__P-s",
-        "outputId": "a2d8b11b-05ca-4db6-ffb7-5336307d44ac"
+        "id": "jiiqGHA__P-s"
       },
       "outputs": [],
       "source": [
         "##!pip uninstall dash jupyter_dash\n",
-        "## Temporary usage of Dash 2.0 due to a bug on 2.1\n",
         "!pip install jupyter-dash\n",
         "!pip install dash --upgrade\n",
-        "\n",
+        "!pip install dash-bootstrap-components \n",
         "##Imports\n",
         "import docx\n",
         "import pandas as pd\n",
         "import re\n",
+        "import tkinter as tk\n",
         "from jupyter_dash import JupyterDash\n",
         "import dash_core_components as dcc\n",
         "import dash_html_components as html\n",
+        "import dash_bootstrap_components as dbc\n",
         "from dash.dependencies import Input, Output, State\n",
         "import webbrowser\n",
-        "\n",
-        "\n",
-        "mydoc = docx.Document()\n",
+        "import datetime\n",
         "\n",
         "# Build App\n",
         "external_stylesheets = ['https://codepen.io/chriddyp/pen/bWLwgP.css']\n",
@@ -370,14 +386,86 @@
         "app = JupyterDash(__name__, external_stylesheets=external_stylesheets)\n",
         "\n",
         "# Define the layout for the home page\n",
-        "home_layout = html.Div([\n",
-        "    html.H1('Code Ops Analyzer', style={'marginTop': '-15px', 'marginBottom': '30px'}),\n",
-        "    html.P('Click below links to navigate'),\n",
-        "    html.Ul([\n",
-        "        html.Li(dcc.Link('Fault Analysis', href='/page-1')),\n",
-        "        html.Li(dcc.Link('Translator', href='/page-2'))\n",
-        "    ])\n",
-        "])\n",
+        "\n",
+        "home_layout = html.Div(\n",
+        "    children=[\n",
+        "        # Header section\n",
+        "        html.Div(\n",
+        "            children=[\n",
+        "                html.H1(\n",
+        "                    children='CodeOps Analyzer',\n",
+        "                    style={\n",
+        "                        'textAlign': 'center',\n",
+        "                        'fontSize': '48px',\n",
+        "                        'fontWeight': 'bold',\n",
+        "                        'color': '#252525',\n",
+        "                        'marginBottom': '30px',\n",
+        "                        'marginTop': '50px'\n",
+        "                    }\n",
+        "                ),\n",
+        "                html.P(\n",
+        "                    children='Improve your coding experience with Code Ops Analyzer',\n",
+        "                    style={\n",
+        "                        'textAlign': 'center',\n",
+        "                        'fontSize': '24px',\n",
+        "                        'color': '#252525'\n",
+        "                    }\n",
+        "                )\n",
+        "            ],\n",
+        "            style={\n",
+        "                'backgroundColor': '#F5F5F5',\n",
+        "                'padding': '50px'\n",
+        "            }\n",
+        "        ),\n",
+        "\n",
+        " # Navigation section\n",
+        "        html.Div(\n",
+        "            children=[\n",
+        "                html.Div(\n",
+        "                    children=[\n",
+        "                        dbc.Button(\n",
+        "                            'Fault Analysis',\n",
+        "                            href='/page-1',\n",
+        "                            style={\n",
+        "                                'fontSize': '24px',\n",
+        "                                'color': '#252525',\n",
+        "                                'marginRight': '30px',\n",
+        "                                'marginBottom': '10px'\n",
+        "                            }\n",
+        "                        ),\n",
+        "                        dcc.Link(\n",
+        "                            'Translator',\n",
+        "                            href='/page-2',\n",
+        "                            style={\n",
+        "                                'fontSize': '24px',\n",
+        "                                'color': '#252525',\n",
+        "                                'marginRight': '30px',\n",
+        "                                'marginBottom': '10px'\n",
+        "                            }\n",
+        "                        ),\n",
+        "                        dcc.Link(\n",
+        "                            'User Stats',\n",
+        "                            href='/page-3',\n",
+        "                            style={\n",
+        "                                'fontSize': '24px',\n",
+        "                                'color': '#252525',\n",
+        "                                'marginRight': '30px',\n",
+        "                                'marginBottom': '10px'\n",
+        "                            }\n",
+        "                        )                           \n",
+        "                    ],\n",
+        "                    style={\n",
+        "                        'textAlign': 'center'\n",
+        "                    }\n",
+        "                )\n",
+        "            ],\n",
+        "            style={\n",
+        "                'backgroundColor': '#FFFFFF',\n",
+        "                'padding': '50px'\n",
+        "            }\n",
+        "        )\n",
+        "    ]\n",
+        ")\n",
         "\n",
         "# Define the layout for page 1\n",
         "page_1_layout = html.Div([\n",
@@ -509,6 +597,8 @@
         "        return ['(nothing generated yet)','']\n",
         "    else:\n",
         "        ## Execute dynamically the 'run_preset_nn' function (where 'nn' is the preset number)\n",
+        "        textarea = hideDemogrphics(textarea)\n",
+        "        print(textarea)\n",
         "        results = globals()['run_preset_%s' % preset](textarea)   \n",
         "        values.append(results)\n",
         "        values.append(\"Q: \"+textarea.strip()+\"\\nA: \"+results.strip())\n",
@@ -524,17 +614,21 @@
         "     Input('intermediate-value', 'data')\n",
         ")\n",
         "def save_to_word(n_clicks,data):\n",
-        "     if n_clicks is None or n_clicks == 0:\n",
-        "          return 'No Output Generated'\n",
-        "     filename = data.split(\"\\n\")\n",
-        "     filename = filename[0]\n",
-        "     filename = filename[3:13]\n",
-        "     filename = filename.replace(\" \", \"_\")\n",
-        "     filename = re.sub(\"[^A-Z_]\", \"\", filename,0,re.IGNORECASE)\n",
-        "     print(data)\n",
+        "     n_clicks = 1\n",
+        "    #  if n_clicks is None or n_clicks == 0:\n",
+        "    #       return 'No Output Generated'\n",
+        "     mydoc = docx.Document()\n",
+        "     basename = data.split(\"\\n\")\n",
+        "     basename = basename[0]\n",
+        "     basename = basename[3:13]\n",
+        "     basename = basename.replace(\" \", \"_\")\n",
+        "     basename = re.sub(\"[^A-Z_]\", \"\", basename,0,re.IGNORECASE)\n",
+        "     suffix = datetime.datetime.now().strftime(\"%y%m%d_%H%M%S\")\n",
+        "     filename = \"_\".join([basename, suffix])\n",
         "     mydoc.add_paragraph(data)\n",
-        "     mydoc.save('D:/ChatGPT3/%s.docx' %filename)\n",
-        "     return 'Exported to Word file!'\n",
+        "     mydoc.save('D:/ChatGPT3/Docs/%s.docx' %filename)\n",
+        "     print(\"Called\")\n",
+        "     return ''\n",
         "\n",
         "\n",
         "# Define the layout for page 2\n",
@@ -551,6 +645,7 @@
         "            {'label': 'Create Process document', 'value': '01'},\n",
         "            {'label': 'Create software design document', 'value': '02'},\n",
         "            {'label': 'Create SRS document', 'value': '03'},\n",
+        "            {'label': 'Create process flow diagram', 'value': '04'}\n",
         "        ],\n",
         "        placeholder=\"Load a preset\"\n",
         "    ),\n",
@@ -616,6 +711,8 @@
         "        query = \"\"\n",
         "  elif dropdown_translate_preset == '03':\n",
         "        query = \"\"\n",
+        "  elif dropdown_translate_preset == '04':\n",
+        "        query = \"\"\n",
         "  return query\n",
         "\n",
         "##\n",
@@ -633,6 +730,7 @@
         "    if n_clicks is None or n_clicks == 0:\n",
         "        return ['(nothing generated yet)','']\n",
         "    else:\n",
+        "        textarea_translate = hideDemogrphics(textarea_translate)\n",
         "        if dropdown_translate == '01':\n",
         "          results = globals()['run_preset_11'](textarea_translate + \" Create Process document\")\n",
         "          values.append(results)\n",
@@ -647,8 +745,13 @@
         "          results = globals()['run_preset_11'](textarea_translate + \" Create SRS Document\") \n",
         "          values.append(results)\n",
         "          values.append(\"Q: \"+textarea_translate.strip()+\"\\nA: \"+results.strip())\n",
-        "          return values  \n",
-        "        return results\n",
+        "          return values\n",
+        "        elif dropdown_translate == '04':\n",
+        "          results = globals()['run_preset_11'](textarea_translate + \" Create process flow diagram\") \n",
+        "          values.append(results)\n",
+        "          values.append(\"Q: \"+textarea_translate.strip()+\"\\nA: \"+results.strip())\n",
+        "          return values\n",
+        "        return ['(Select a preset first)','']\n",
         "\n",
         "##\n",
         "## Called when the Button 'Word' in translate page is pushed\n",
@@ -658,18 +761,22 @@
         "     Input('translate-button-word','n_clicks'),\n",
         "     Input('translate-intermediate-value', 'data')\n",
         ")\n",
-        "def save_to_word(n_clicks,data):\n",
-        "     if n_clicks is None or n_clicks == 0:\n",
-        "          return 'No Output Generated'\n",
-        "     filename = data.split(\"\\n\")\n",
-        "     filename = filename[0]\n",
-        "     filename = filename[3:13]\n",
-        "     filename = filename.replace(\" \", \"_\")\n",
-        "     filename = re.sub(\"[^A-Z_]\", \"\", filename,0,re.IGNORECASE)\n",
-        "     print(data)\n",
+        "def save_to_word_translate(n_clicks,data):\n",
+        "     n_clicks = 1\n",
+        "    #  if n_clicks is None or n_clicks == 0:\n",
+        "    #       return 'No Output Generated'\n",
+        "     mydoc = docx.Document()\n",
+        "     basename = data.split(\"\\n\")\n",
+        "     basename = basename[0]\n",
+        "     basename = basename[3:13]\n",
+        "     basename = basename.replace(\" \", \"_\")\n",
+        "     basename = re.sub(\"[^A-Z_]\", \"\", basename,0,re.IGNORECASE)\n",
+        "     suffix = datetime.datetime.now().strftime(\"%y%m%d_%H%M%S\")\n",
+        "     filename = \"_\".join([basename, suffix])\n",
         "     mydoc.add_paragraph(data)\n",
-        "     mydoc.save('D:/ChatGPT3/%s.docx' %filename)\n",
-        "     return 'Exported to Word file!'\n",
+        "     mydoc.save('D:/ChatGPT3/Docs/%s.docx' %filename)\n",
+        "     print(\"Called\")\n",
+        "     return ''\n",
         "\n",
         "# Define the callbacks to update the page content based on the URL\n",
         "@app.callback(Output('page-content', 'children'),\n",
@@ -684,17 +791,18 @@
         "    else:\n",
         "        return '404 Page Not Found'\n",
         "\n",
-        "url = \"http://localhost:8050/\"\n",
+        "url = \"http://localhost:8051/\"\n",
         "webbrowser.open_new(url)\n",
         "\n",
         "\n",
         "# Run app and display result inline in the notebook\n",
-        "app.run_server(debug=False)"
+        "app.run_server(debug=True,port = 8051)"
       ]
     }
   ],
   "metadata": {
     "colab": {
+      "include_colab_link": true,
       "provenance": []
     },
     "kernelspec": {
